name:            yesod-routes
version:         1.2.0.5
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Efficient routing for Yesod.
description:     Provides an efficient routing system, a parser and TH code generation.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/
extra-source-files:
  test/main.hs

library
    build-depends:   base                      >= 4        && < 5
                   , text                      >= 0.5
                   , vector                    >= 0.8      && < 0.11
                   , containers                >= 0.2
                   , template-haskell
                   , path-pieces               >= 0.1      && < 0.2

    exposed-modules: Yesod.Routes.Dispatch
                     Yesod.Routes.TH
                     Yesod.Routes.Class
                     Yesod.Routes.Parse
                     Yesod.Routes.Overlap
    other-modules:   Yesod.Routes.TH.Dispatch
                     Yesod.Routes.TH.RenderRoute
                     Yesod.Routes.TH.ParseRoute
                     Yesod.Routes.TH.RouteAttrs
                     Yesod.Routes.TH.Types
    ghc-options:     -Wall

test-suite runtests
    type: exitcode-stdio-1.0
    main-is: main.hs
    hs-source-dirs: test
    other-modules: Hierarchy

    build-depends: base                      >= 4.3      && < 5
                 , yesod-routes
                 , text                      >= 0.5
                 , HUnit                     >= 1.2      && < 1.3
                 , hspec                     >= 1.3
                 , containers
                 , template-haskell
                 , path-pieces
                 , bytestring
    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/yesodweb/yesod
